--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: Roboto-Light;
-    src: url(/Roboto/Roboto-Light.ttf);
+    src: url(./Roboto/Roboto-Light.ttf);
 }
 
 @font-face {
     font-family: Roboto-Bold;
-    src: url(/Roboto/Roboto-Bold.ttf);
+    src: url(./Roboto/Roboto-Bold.ttf);
 }
 
 body {
