--- a/YoutubeComments aka The Facebook Post/style.css
+++ b/YoutubeComments aka The Facebook Post/style.css
@@ -53,6 +53,11 @@ h1, h2, h3, h4, h5, p, a, img, i, button {
     border: none;
 }
 
+.remove-comment-style {
+    background-color: transparent !important;
+    padding: 0 !important;
+}
+
 /* /////////////////////////// */
 
 .video-info__title {
@@ -140,7 +145,12 @@ h1, h2, h3, h4, h5, p, a, img, i, button {
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
+    display: none;
+}
+
+.comment-display__post-container:hover .fa-ellipsis-vertical {
+    display: block;
 }
 
 .comment-display__right-column {
