--- a/Typewriter/style.css
+++ b/Typewriter/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     position: relative;
+    overflow: hidden;
 }
 
 div {
@@ -11,6 +12,7 @@ div {
     max-width: 400px;
     width: 400px;
     height: 250px;
+    /* overflow-y: scroll; */
 }
 
 p {
@@ -20,6 +22,7 @@ p {
     margin: 0;
     word-wrap: break-word;
     font-size: 18px;
+    overflow-y: scroll;
 }
 
 img {
