--- a/Typewriter/style.css
+++ b/Typewriter/style.css
@@ -6,7 +6,33 @@ body {
     overflow: hidden;
 }
 
-div {
+.highlight__background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,.8);
+    z-index: 1000;
+    display: none;
+}
+
+.highlight__container {
+    background-color: rgba(255,255,255,.8);
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    top: 40px;
+    z-index: 2000;
+    border-radius: 10px;
+    display: none;
+}
+
+h1 {
+    text-align: center;
+    font-size: 10rem;
+    margin: auto 0;
+}
+
+.text__container {
     position: absolute;
     top: 60px;
     max-width: 400px;
@@ -30,3 +56,6 @@ img {
     height: 800px;
 }
 
+.display {
+    display: block !important;
+}
