--- a/Typewriter/style.css
+++ b/Typewriter/style.css
@@ -6,30 +6,21 @@ body {
     overflow: hidden;
 }
 
-.highlight__background {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0,0,0,.8);
-    z-index: 1000;
-    display: none;
-}
-
 .highlight__container {
-    background-color: rgba(255,255,255,.8);
+    background-color: rgba(255,255,255,0);
     position: absolute;
     width: 100%;
     height: 200px;
     top: 40px;
     z-index: 2000;
     border-radius: 10px;
-    display: none;
 }
 
 h1 {
     text-align: center;
     font-size: 10rem;
     margin: auto 0;
+    display: none;
 }
 
 .text__container {
@@ -38,7 +29,6 @@ h1 {
     max-width: 400px;
     width: 400px;
     height: 250px;
-    /* overflow-y: scroll; */
 }
 
 p {
@@ -58,4 +48,9 @@ img {
 
 .display {
     display: block !important;
+}
+
+.transition {
+    background-color: rgba(255,255,255,.8);
+    transition: background-color .2s ease-out, color .2s ease-out;
 }
