--- a/SimpleCalculator/style.css
+++ b/SimpleCalculator/style.css
@@ -3,6 +3,7 @@ body {
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
+    overflow-x: hidden;
 }
 
 h1, h2 {
@@ -10,13 +11,57 @@ h1, h2 {
     color: white;
 }
 
+.container-calc {
+    transform: translateY(15rem);
+    height: 20rem;
+}
+
 .invalid {
-    border: 3px solid red !important;
+    border: 3px solid red !important; 
     border-radius: 5px;
     outline: none;
 }
 
 #result {
     width: 500px;
-    height: 500px;
+    margin: 0 auto;
+}
+
+img {
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    transform: translateX(17rem);  
+}
+
+.add-puppet {
+    transform: translateX(0rem);
+    transition: transform 13s ease-out; 
+}
+
+.remove-calc {
+    transform: translateY(-10rem);
+    transition: transform 5s ease-in-out;
+}
+
+.container-game {
+    position: absolute;
+    transform: translateY(3rem);
+    height: 20rem;
+    opacity: 0;
+}
+
+.opacity-show {
+    opacity: 1;
+    transform: scaleZ(1rem);
+    transition: opacity 5s ease-in-out 2s;
+}
+
+.container-game label {
+    color: white;
+}
+
+#special {
+    color: white;
+    background-color: red;
 }
