--- a/FullCalculatorApp/style.css
+++ b/FullCalculatorApp/style.css
@@ -1,5 +1,5 @@
 body {
-    /* background-color: black; */
+    background-color: black;
     display: flex;
     justify-content: center;
 }
@@ -48,8 +48,12 @@ h1 {
 
 button {
     color: black;
-    /* background-color: white; */
     border-radius: 3px;
     height: 3rem;
     border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: lightgray;
 }
