--- a/SimpleCalculator/style.css
+++ b/SimpleCalculator/style.css
@@ -4,6 +4,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 h1, h2 {
@@ -30,7 +31,7 @@ h1, h2 {
     margin: 0 auto;
 }
 
-img {
+.puppet {
     position: absolute;
     top: 5rem;
     right: 0;
@@ -53,6 +54,7 @@ img {
     height: 20rem;
     opacity: 0;
     z-index: 0;
+    width: 30rem;
 }
 
 .opacity-show {
@@ -73,4 +75,130 @@ img {
 .answer-wrapper {
     display: flex;
     justify-content: center;
+}
+
+.virus-seconds {
+    color: red;
+}
+
+.download-bar__arrow-wrapper {
+    background-color: #ffffff;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    top: -5rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    z-index: 1000;
+    opacity: 1;
+    transform: translateY(-2rem);
+    transition: opacity 1s ease-in-out .9s, transform 1s ease-in-out .9s;
+}
+
+/* .show-download-arrow {
+} */
+
+.remove-download-arrow {
+    opacity: 0;
+    transform: translateY(4rem);
+}
+
+.fa-down-long {
+    color: #1a73e8;
+    font-size: 2rem;
+    background-color: #ffffff;
+}
+
+.fa-chevron-up, .fa-xmark {
+    color: #7c7f83;
+}
+
+.download-bar {
+    height: 55px;
+    width: 100vw;
+    position: absolute;
+    bottom: 0;
+    background-color: #ffffff;
+    transform: translateY(4rem);
+    transition: transform 1s ease-in-out;
+}
+
+.show-download-bar {
+    transform: translateY(0rem) !important;
+}
+
+.download-bar__container {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.download-bar__left-column {
+    display: flex;
+    align-items: center;
+    /* padding: 0 .6rem; */
+    width: 14.7rem;
+    position: relative;
+}
+
+.download-bar__left-column p {
+    font-size: 12px;
+    opacity: 0;
+    transition: opacity 1s ease-in-out 1.4s;
+}
+
+.download-bar__circle-image {
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    margin: auto 8px;
+    border-radius: 50%;
+    border: 2px solid #1a73e9;
+    opacity: 0;
+    transition: opacity 1s ease-in-out 2s;
+}
+
+.download-bar__exe-image {
+    width: 2rem;
+    height: 2rem;
+    margin: auto 10px;
+}
+
+.download-bar__chevron-wrapper {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0rem;
+    background-color: #ffffff;
+    border-right: 1px solid rgb(128,128,128,.5);
+    height: 2.5rem;
+    padding: 0 1rem 0 2rem;
+    transform: translateX(-11rem);
+    transition: transform 1s ease-in-out 1s;
+}
+
+.show-download-file {
+    transform: translateX(0rem) !important;
+    opacity: 1 !important;
+}
+
+.fa-chevron-up {
+    font-size: 12px;
+}
+
+.download-bar__button {
+    border: 1px solid rgb(128,128,128,.5);
+    background-color: transparent;
+    border-radius: 5px;
+    color: #1a73e9;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.fa-xmark {
+    margin: auto .8rem;
 }
