--- a/SimpleCalculator/style.css
+++ b/SimpleCalculator/style.css
@@ -77,7 +77,7 @@ h1, h2 {
     justify-content: center;
 }
 
-.virus-seconds {
+.download-seconds {
     color: red;
 }
 
@@ -94,16 +94,21 @@ h1, h2 {
     border-radius: 50%;
     z-index: 1000;
     opacity: 1;
+    visibility: hidden;
     transform: translateY(-2rem);
-    transition: opacity 1s ease-in-out .9s, transform 1s ease-in-out .9s;
+    transition: opacity 1s ease-in-out .9s, transform 1s ease-in-out .9s, visibility .5s linear 1s;
 }
 
-/* .show-download-arrow {
-} */
+.visible {
+    visibility: visible;
+}
 
-.remove-download-arrow {
-    opacity: 0;
+.move-arrow-down {
     transform: translateY(4rem);
+}
+
+.remove-arrow {
+    opacity: 0;
 }
 
 .fa-down-long {
@@ -140,7 +145,6 @@ h1, h2 {
 .download-bar__left-column {
     display: flex;
     align-items: center;
-    /* padding: 0 .6rem; */
     width: 14.7rem;
     position: relative;
 }
@@ -158,8 +162,10 @@ h1, h2 {
     margin: auto 8px;
     border-radius: 50%;
     border: 2px solid #1a73e9;
-    opacity: 0;
-    transition: opacity 1s ease-in-out 2s;
+}
+
+.display-none {
+    display: none;
 }
 
 .download-bar__exe-image {
