--- a/ToDoApp/style.css
+++ b/ToDoApp/style.css
@@ -1,8 +1,22 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: bolder;
     background-color: black;
     display: flex;
     justify-content: center;
+    color: gray;
+}
+
+ul {
+    padding: 0;
+}
+
+li {
+    list-style: none;
+}
+
+label {
+    margin-left: 1rem;
 }
 
 .todoapp-container {
@@ -32,11 +46,48 @@ body {
     border-radius: 5px;
 }
 
-.todoapp-body__input {
-    width: 100%;
+.todoapp-body__wrapper {
+    margin: 2rem auto;
+    width: 60%;
+    position: relative;
 }
 
-.todoapp-body__wrapper {
-    margin: 0 auto;
-    width: 80%;
+.form-input {
+    display: flex;
+}
+
+.plus-icon {
+    width: 24px;
+    position: absolute;
+    right: 0rem;
+    top: -0.3rem;
+    cursor: pointer;
+}
+
+.todoapp-body__input {
+    width: 97%;
+    border-style: none;
+    border-bottom: 1px solid gray;
+    font-size: 16px;
+    padding-bottom: 0.5rem;
+}
+
+.todoapp-body__input:focus {
+    outline: none;
+}
+
+.todoapp-body__items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.todoapp-body__items div {
+    display: flex;
+    align-items: center;
+}
+
+.garbage-icon {
+    width: 18px;
+    cursor: pointer;
 }
