--- a/Pomodoro App/style.css
+++ b/Pomodoro App/style.css
@@ -1,13 +1,22 @@
 body {
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.flex {
     display: flex;
     justify-content: center;
 }
 
+.text-center {
+    text-align: center;
+}
+
 main {
     background-color: white;
-    width: 800px;
+    min-width: 750px;
     border-radius: 10px;
+    padding-bottom: 50px;
 }
 
 h1 {
@@ -15,7 +24,30 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    margin: 0 auto;
+}
+
+h3, h4 {
+    margin: 20px auto 5px;
+}
+
 .pomodoro-section {
     display: flex;
     justify-content:space-around;
+}
+
+.pomodoro-timer {
+    margin-top: 20px;
+}
+
+.add-todo {
+    padding-top:6px;
+}
+
+.todo-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 24px;
 }
