--- a/Pomodoro App/style.css
+++ b/Pomodoro App/style.css
@@ -36,6 +36,10 @@ h3, h4 {
     margin: 20px auto 5px;
 }
 
+li {
+    list-style: none;
+}
+
 .pomodoro-section {
     display: flex;
     justify-content:space-around;
